--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/quill";
+
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
 
 body {
   background: url("assets/images/bg_site.jpg");
