--- a/src/assets/quill.scss
+++ b/src/assets/quill.scss
@@ -23,6 +23,10 @@ quill-editor {
     &.ql-snow {
       border: none;
     }
+
+    .ql-editor {
+      @include scrollbar(4px, #600101);
+    }
   }
 }
 
