--- a/src/assets/mixins.scss
+++ b/src/assets/mixins.scss
@@ -10,3 +10,23 @@
     1px 0 0 #000,
     1px 1px 0 #000;
 }
+
+@mixin scrollbar(
+  $size,
+  $foreground-color,
+  $background-color: mix($foreground-color, white, 50%)
+) {
+  &::-webkit-scrollbar {
+    width: $size;
+    height: $size;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $foreground-color;
+    box-shadow: inset 0 0 0 1.5px $background-color;
+    border-radius: 0.25rem;
+  }
+  &::-webkit-scrollbar-track {
+    background: $background-color;
+    border-radius: 0.25rem;
+  }
+}
