--- a/src/app/card-settings/card-settings.component.scss
+++ b/src/app/card-settings/card-settings.component.scss
@@ -80,8 +80,8 @@
 }
 
 .cardback-list {
-  display: grid;
-  grid-template-columns: repeat(7, min-content);
+  display: flex;
+  flex-wrap: wrap;
 }
 
 input, textarea {
