--- a/src/app/text-button/text-button.component.html
+++ b/src/app/text-button/text-button.component.html
@@ -1,3 +1,3 @@
-<button class="button">
-  {{ text }}
+<button class="button" [style.width]="width" [ngClass]="{'active': isActive}">
+  {{ text | translate }}
 </button>
