list fixes and temporary numeric list disabling

--- a/src/assets/quill.scss
+++ b/src/assets/quill.scss
@@ -67,4 +67,18 @@ quill-editor {
       }
     }
   }
+
+  ul {
+    padding: 0;
+
+    li {
+      &::marker {
+        content: '';
+      }
+
+      &::before {
+        content: 'ㅤ• ';
+      }
+    }
+  }
 }
