--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -5,6 +5,9 @@
   border-radius: 10px;
   overflow: hidden;
   hyphens: auto;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
 
   .frame {
     display: flex;
