--- a/src/assets/quill.scss
+++ b/src/assets/quill.scss
@@ -15,6 +15,11 @@ quill-editor {
       height: 20px;
       width: 20px;
     }
+
+    .ql-icon-picker {
+      height: 20px;
+      width: 24px;
+    }
   }
 
   .ql-container {
@@ -68,10 +73,12 @@ quill-editor {
     }
   }
 
-  ul {
+  ul, ol {
     padding: 0;
 
     li {
+      padding: 0;
+
       &::marker {
         content: '';
       }
