--- a/docs/assets/quill.scss
+++ b/docs/assets/quill.scss
@@ -15,6 +15,11 @@ quill-editor {
       height: 20px;
       width: 20px;
     }
+
+    .ql-icon-picker {
+      height: 20px;
+      width: 24px;
+    }
   }
 
   .ql-container {
@@ -64,6 +69,22 @@ quill-editor {
 
       &::before {
         content: 'ㅤ';
+      }
+    }
+  }
+
+  ul, ol {
+    padding: 0;
+
+    li {
+      padding: 0;
+
+      &::marker {
+        content: '';
+      }
+
+      &::before {
+        content: 'ㅤ• ';
       }
     }
   }
