--- a/src/app/text-editor/text-editor.component.html
+++ b/src/app/text-editor/text-editor.component.html
@@ -1,3 +1,27 @@
 <quill-editor class="text-editor" [formControl]="control"
               (onEditorCreated)="getEditorInstance($event)">
+  <div quill-editor-toolbar>
+    <span class="ql-formats">
+      <button class="ql-bold" [title]="'Bold'"></button>
+      <button class="ql-italic" [title]="'Italic'"></button>
+      <button class="ql-underline" [title]="'Underline'"></button>
+      <button class="ql-strike" [title]="'Strike'"></button>
+    </span>
+    <span class="ql-formats">
+      <button class="ql-list" value="bullet"></button>
+      <select class="ql-align" [title]="'Aligment'">
+        <option selected></option>
+        <option value="center"></option>
+        <option value="right"></option>
+        <option value="justify"></option>
+      </select>
+      <button class="ql-indent" value="-1"></button>
+      <button class="ql-indent" value="+1"></button>
+    </span>
+    <span class="ql-formats">
+      <button class="ql-clear" (click)="clear()">
+        <img ngSrc="assets/icons/delete.svg" alt="Delete" height="14" width="14">
+      </button>
+    </span>
+  </div>
 </quill-editor>
