--- a/docs/assets/quill.scss
+++ b/docs/assets/quill.scss
@@ -20,10 +20,16 @@ quill-editor {
       height: 20px;
       width: 24px;
     }
+
+    .ql-clear {
+      opacity: 0.7;
+    }
   }
 
   .ql-container {
     font-size: 14px;
+    overflow-y: auto;
+    @include scrollbar(4px, #600101);
 
     &.ql-snow {
       border: none;
