--- a/src/app/card-settings/card-settings.component.html
+++ b/src/app/card-settings/card-settings.component.html
@@ -195,7 +195,7 @@
         <app-text-button [isActive]="formatControl.value === '63,5 x 88'" [text]="'63,5 x 88'"
                          (click)="formatControl.setValue('63,5 x 88')">
         </app-text-button>
-        <app-text-button [isActive]="formatControl.value === '65 x 100'" [text]="'65 x 100'"
+        <app-text-button [isActive]="formatControl.value === '65 x 100'" [text]="'65 x 100 (WIP)'"
                          [matTooltip]="'BURN MY EYES IN THE NAME OF MAXIC'"
                          (click)="formatControl.setValue('65 x 100')">
         </app-text-button>
