--- a/src/app/text-editor/text-editor.component.html
+++ b/src/app/text-editor/text-editor.component.html
@@ -8,6 +8,12 @@
       <button class="ql-strike" [title]="'Strike'"></button>
     </span>
     <span class="ql-formats">
+       <select class="ql-header">
+        <option value="">Normal</option>
+        <option value="3">Header</option>
+      </select>
+    </span>
+    <span class="ql-formats">
       <button class="ql-list" value="bullet"></button>
       <select class="ql-align" [title]="'Aligment'">
         <option selected></option>
