--- a/src/assets/quill.scss
+++ b/src/assets/quill.scss
@@ -11,6 +11,10 @@ quill-editor {
       margin-right: 5px;
     }
 
+    .ql-picker.ql-header {
+      width: 74px;
+    }
+
     button {
       height: 20px;
       width: 20px;
