--- a/src/app/card-shirt/card-shirt.component.scss
+++ b/src/app/card-shirt/card-shirt.component.scss
@@ -2,8 +2,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 468px;
   margin-top: -1px;
+
+  &.poker-format {
+    height: 468px;
+  }
+
+  &.wh-format {
+    height: 557px;
+  }
 
   .shirt-background-container {
     position: relative;
