--- a/src/app/text-button/text-button.component.scss
+++ b/src/app/text-button/text-button.component.scss
@@ -5,4 +5,9 @@
   font-family: Gwent, fantasy;
   color: white;
   font-size: 20px;
+
+  :host-context(.button-list) & {
+    min-width: 50px;
+    hyphens: auto;
+  }
 }
