--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,3 +132,10 @@ table {
     border-bottom: 2px solid #600101;
   }
 }
+
+h3 {
+  margin: 0;
+  font-size: 1em;
+  background: sandybrown;
+  padding: 5px 0 0;
+}
