--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,6 +136,6 @@ table {
 h3 {
   margin: 0;
   font-size: 1em;
-  background: sandybrown;
-  padding: 5px 0 0;
+  background: ivory;
+  padding: 5px 10px 0;
 }
