--- a/src/styles.scss
+++ b/src/styles.scss
@@ -136,6 +136,9 @@ table {
 h3 {
   margin: 0;
   font-size: 1em;
-  background: ivory;
-  padding: 5px 10px 0;
+  line-height: 1em;
+  background: #F5EEDC;
+  color: #600101;
+  font-family: Gwent, fantasy;
+  padding: 5px 10px;
 }
